# myria

./: .gitignore  Cargo.toml  Makefile  bochsrc.txt  link.ld  x86-myria.json
.cargo/: config
iso/: grub.cfg
src/: gdt.rs  idt.rs  io.rs  isrs.rs  kernel.asm  lib.rs  pic.rs  vga.rs
