[package]
name = "myria"
version = "0.1.0"
authors = ["Dmitry Polyanitsa <coffeecup.winner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
x86 = "0.25.0"

[dependencies.lazy_static]
version = "^1.4.0"
features = ["spin_no_std"]
